# Autonomous-Mobile-Service-Robot-with-GUI-and-Auto-Docking

./: README.md
src/cafe_gui/: package.xml  setup.cfg  setup.py
src/cafe_gui/cafe_gui/: gui_node.py  main_window.py  test_robot_node.py
src/cafe_gui/cafe_gui/widgets/: map_widget.py
src/cafe_gui/launch/: gui_launch.py
src/cafe_robot_manager/: CMakeLists.txt  package.xml
src/cafe_robot_manager/config/: slam_params.yaml
src/cafe_robot_manager/launch/: nav2.launch.py  slam.launch.py
src/cafe_robot_manager/maps/: cafe.pgm  cafe.yaml  my_cafe_map.pgm  my_cafe_map.yaml
src/cafe_robot_manager/rviz/: slam.rviz
src/cafe_robot_manager/src/: manager_node.cpp
src/cafe_simulation/: CMakeLists.txt  package.xml
src/cafe_simulation/config/: slam_params.yaml
src/cafe_simulation/launch/: start_simulation.launch.py  yedek.py
src/cafe_simulation/urdf/: turtlebot3_burger.urdf
src/cafe_simulation/world/: cafe.world
